--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <base href='/'>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png" />
-    <link rel="icon" type="image/png" href="./assets/img/unnamed.png " />
+    <link rel="icon" type="image/png" href="./assets/img/ntLogo.png " />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>การลงตรวจอิเล็กทรอนิค</title>
