edit validation and chang some modal scale

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
  </head>
 <body>
   <app-root>
-    <div class="loader">
-      <svg class="circular" ><!--viewBox="25 25 50 50"-->
+   <div class="loader">
+      <svg class="circular" > <!--viewBox="25 25 50 50"-->
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
       </svg>
     </div>
@@ -55,7 +55,7 @@
   <body>
     <app-root>
       <div class="loader">
-        <svg class="circular" ><!--viewBox="25 25 50 50"-->
+        <svg class="circular" > <!--viewBox="25 25 50 50" table-list-->
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
         </svg>
       </div>
@@ -87,7 +87,7 @@
   <body>
     <app-root>
       <div class="loader">
-        <svg class="circular" ><!--viewBox="25 25 50 50"-->
+        <svg class="circular" > <!--viewBox="25 25 50 50"-->
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
         </svg>
       </div>
