Revert "edit typro and apply to show text detail"
This reverts commit c6cf950404ec6f8cdeb2dbdde8c7d775c97f9421.

--- a/src/index.html
+++ b/src/index.html
@@ -51,12 +51,6 @@
 
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
-
-    <!-- Font sarabus..-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-   <!--End Fort sarabus-->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
     <script>window.global = window;</script>
 
@@ -102,11 +96,11 @@
    </head>
   <body>
     <app-root>
-      <!--<div class="loader">
-        <svg class="circular" > <--viewBox="25 25 50 50"--
+      <div class="loader">
+        <svg class="circular" > <!--viewBox="25 25 50 50"-->
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
         </svg>
-      </div>-->
+      </div>
     </app-root>
   </body>
   
