--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <svg class="circular" > <!--viewBox="25 25 50 50"-->
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
       </svg>
-    </div> -->
+    </div> 
   </app-root>
 </body>
 
@@ -57,15 +57,8 @@
   </head>
   <body>
     <app-root>
-<<<<<<< HEAD
       <!--<div class="loader">
         <svg class="circular" > <--viewBox="25 25 50 50" table-list--
-=======
-      <!-- <div class="loader">
-        <svg class="circular" ><!--viewBox="25 25 50 50"-
-      <div class="loader">
-        <svg class="circular" > <!--viewBox="25 25 50 50" table-list-->
->>>>>>> 8ba8f7a19c90780a80a9facc9ac2836ad2122776
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
         </svg>
       </div> -->
@@ -90,6 +83,12 @@
       
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
       <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+
+      <!--thai font style-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Sriracha&family=Teko:wght@300&display=swap" rel="stylesheet">
+      <!--thai font style-->
       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
       <script>window.global = window;</script>
   
