--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
 </head>
 <body>
   <app-root>
-   <div class="loader">
-      <svg class="circular" > <!--viewBox="25 25 50 50"-->
+   <!--<div class="loader">
+      <svg class="circular" > <--viewBox="25 25 50 50"--
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
       </svg>
-    </div> 
+    </div> -->
   </app-root>
 </body>
 
@@ -95,11 +95,11 @@
    </head>
   <body>
     <app-root>
-      <div class="loader">
-        <svg class="circular" > <!--viewBox="25 25 50 50"-->
+     <!-- <div class="loader">
+        <svg class="circular" > <--viewBox="25 25 50 50"--
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
         </svg>
-      </div>
+      </div>-->
     </app-root>
   </body>
   
