15//07 commit in morning

--- a/src/index.html
+++ b/src/index.html
@@ -60,13 +60,13 @@
     <app-root>
       <!--<div class="loader">
         <svg class="circular" > <--viewBox="25 25 50 50" table-list--
-      <!-- <div class="loader">
-        <svg class="circular" ><!--viewBox="25 25 50 50"-
+      <!<div class="loader">
+        <svg class="circular" ><!viewBox="25 25 50 50"-
       <div class="loader">
-        <svg class="circular" > <!--viewBox="25 25 50 50" table-list-->
+        <svg class="circular" > <iewBox="25 25 50 50" table-list-
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
         </svg>
-      </div>
+      </div>-->
     </app-root>
   </body>
   </html>
@@ -105,7 +105,7 @@
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
         </svg>
       </div> -->
-      </div>
+      
     </app-root>
   </body>
   
