--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="./assets/img/ntLogo.png " />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>การลงตรวจอิเล็กทรอนิค</title>
